--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "ecommerce-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/server.ts",
   "scripts": {
-    "build": "npx tsc",
-    "start": "node dist/index.js",
-    "dev": "nodemon index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc -p tsconfig.json",
+    "start": "node dist/server.js",
+    "dev": "nodemon --watch src --ext ts --exec \"ts-node src/server.ts\"",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "format": "npx prettier . --write"
   },
   "author": "gkumar-pandey",
   "license": "ISC",
@@ -29,6 +30,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.14.6",
+    "prettier": "^3.3.2",
     "nodemon": "^3.1.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
